@@ -1,3 +1,11 @@
+2002-11-07  Daniel Elstner  <daniel.elstner@gmx.net>
+
+	* src/filetree.{cc,h} (text_cell_data_func): Simplify.
+	(load_file_with_fallback): Improve robustness of the code, and
+	trigger row_changed() if load_failed has been set.  For some
+	reason it worked without this explicit emission, but it's better
+	not to rely on that.
+
 2002-11-06  Daniel Elstner  <daniel.elstner@gmx.net>
 
 	* src/filetree.{cc,h}: Show an icon indicating whether the item
